--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,11 @@ h5 {
     display: block;
 }
 
+a {
+    color: white;
+    font-weight: 500;
+}
+
 @media (max-width: 1024px) {
     .container {
         max-width: 90%;
